--- a/assets/style.css
+++ b/assets/style.css
@@ -6,22 +6,22 @@
 .header
 {
     position: absolute;
-    height:  15%;
+    height:  11.23%;
     width: 100%;
-    background: rgb(71, 67, 67);
+    background: #ffffff;
     margin: 0;
     top: 0;
     left: 0;
-    z-index: 1;
+
 }
 
 .left-logo-area
 {
     position: relative;
     height:100%;
-    width:15.7%;
+    width:15.61%;
     top:0;
-    background: black;
+    background: #ffffff;
     float: left;
 }
 
@@ -30,9 +30,19 @@
     position: relative;
     height: 100%;
     width: 17.7%;
-    background: teal;
+    background: #4aaaa5;
     top: 0;
     float: left;
+    color: white;
+}
+
+.main-logo-text
+{
+    position: relative;
+    height: 100%;
+    width: 100%;
+    padding: 30px;
+    font-size: 28px;
 }
 
 .right-logo-area
@@ -41,7 +51,7 @@
     height: 100%;
     width: 32.5%;
     float: left;
-    background: orange;
+    background: #ffffff;
 }
 
 .about-link
@@ -50,7 +60,13 @@
     height: 100%;
     width:5.45%;
     float: left;
-    background: teal;
+    background: #ffffff;
+}
+
+.about-link-text
+{
+    padding: 30px;
+    font-size: 14px;
 }
 
 .portfolio
@@ -59,7 +75,13 @@
     height: 100%;
     width: 7.43%;
     float: left;
-    background: orange;
+    background: #ffffff;
+}
+
+.portfolio-text
+{
+    padding: 30px;
+    font-size: 14px;
 }
 
 .contact
@@ -68,7 +90,13 @@
     height: 100%;
     width: 6.64%;
     float: left;
-    background: teal;
+    background: #ffffff;
+}
+
+.contact-text
+{
+    padding: 30px;
+    font-size: 14px;
 }
 
 .contact-right
@@ -77,7 +105,88 @@
     height: 100%;
     width: 14.58%;
     float: left;
-    background: orange;
+    background: #ffffff;
+}
+/* 
+width 957
+height 497
+*/
+.main-header
+{
+    position: absolute;
+    top: 16%;
+    bottom: 93.8%;
+    left: 15.61%;
+    right:84.38%;
+    width: 68.77%;
+    height: 77.6%;
+    background: #333;
+}
+
+.main-header-header
+{
+    position: relative;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 20.32%;
+    background: blue;
+}
+
+.main-header-header-text
+{
+    float: left;
+}
+
+.main-body
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80.68%;
+}
+
+#main-body-top-border
+{
+    position: relative;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 06%;
+}
+
+#main-body-left-border
+{
+    position: relative;
+    top:0%;
+    left: 0%;
+    width: 3.1%;
+    height: 100%;
+    float: left;
+}
+
+.main-body-image
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 20.89%;
+    height: 30.18%;
+    float: left;
+}
+
+.profile-picture
+{
+    width: 100%;
+    height: 100%;
+}
+
+.main-text
+{
+    position: relative;
+    top: 0;
+    left: 0; 
 }
 
 .clearfix::after {
