--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,8 @@
     margin: 0;
     top: 0;
     left: 0;
-
+    border-color: #cccccc;
+    border-bottom-style: solid;
 }
 
 .left-logo-area
@@ -25,7 +26,7 @@
     float: left;
 }
 
-.main-logo
+#main-logo
 {
     position: relative;
     height: 100%;
@@ -36,16 +37,16 @@
     color: white;
 }
 
-.main-logo-text
+#main-logo-text
 {
     position: relative;
     height: 100%;
     width: 100%;
-    padding: 30px;
+    padding: 25px;
     font-size: 28px;
 }
 
-.right-logo-area
+#right-logo-area
 {
     position: relative;
     height: 100%;
@@ -54,52 +55,75 @@
     background: #ffffff;
 }
 
-.about-link
+#header-link-area
+{
+    top: 0;
+    width: 65.81%;
+    float: left;
+    background: #3333;
+}
+
+#header-link-top
 {
     position: relative;
-    height: 100%;
+    background: #3333;
+    height:27.27%;
+    width: 34.19%;
+    float: left;
+}
+
+#about-link
+{
+    position: relative;
+    height: 45.45%;
     width:5.45%;
     float: left;
     background: #ffffff;
+    border-color: #cccccc;
+    border-right-style: solid;
 }
 
-.about-link-text
+#about-link-text
 {
     padding: 30px;
     font-size: 14px;
 }
 
-.portfolio
+#portfolio
 {
     position: relative;
-    height: 100%;
+    height: 45.45%;
     width: 7.43%;
     float: left;
     background: #ffffff;
+    border-color: #cccccc;
+    border-right-style: solid;
 }
 
-.portfolio-text
+#portfolio-text
 {
     padding: 30px;
     font-size: 14px;
 }
 
-.contact
+#contact
 {
     position: relative;
-    height: 100%;
+    height: 45.45%;
     width: 6.64%;
     float: left;
     background: #ffffff;
+    border-color: #cccccc;
+    border-right-style: solid;
 }
 
-.contact-text
+#contact-text
 {
     padding: 30px;
     font-size: 14px;
 }
 
-.contact-right
+#contact-right
 {
     position: relative;
     height: 100%;
@@ -111,34 +135,52 @@
 width 957
 height 497
 */
-.main-header
+#main-body
 {
     position: absolute;
     top: 16%;
-    bottom: 93.8%;
+    bottom: 77.6%;
     left: 15.61%;
     right:84.38%;
     width: 68.77%;
-    height: 77.6%;
-    background: #333;
+    height: 61.7%;
+    background: #ffffff;
+    border-style: solid;
+    border-color: #dddddd;
 }
 
-.main-header-header
+#main-body-header
 {
     position: relative;
     top:0;
     left:0;
     width: 100%;
     height: 20.32%;
-    background: blue;
+    background: #ffffff;
+    border-color: #dddddd;
+    border-bottom-style: solid;
 }
 
-.main-header-header-text
+#main-body-header-text-left-border
 {
+    position: relative;
+    top:0%;
+    left: 0%;
+    width: 3.1%;
+    height: 100%;
     float: left;
 }
 
-.main-body
+#main-body-header-text
+{
+    position: relative;
+    padding: 42px;
+    float: left;
+    font-size: 21px;
+    color: #4aaaa5;
+}
+
+#main-body-body
 {
     position: relative;
     top: 0;
@@ -166,7 +208,7 @@ height 497
     float: left;
 }
 
-.main-body-image
+#main-body-image
 {
     position: relative;
     top: 0;
@@ -176,13 +218,13 @@ height 497
     float: left;
 }
 
-.profile-picture
+#profile-picture
 {
     width: 100%;
     height: 100%;
 }
 
-.main-text
+#main-text
 {
     position: relative;
     top: 0;
